updated nginx config file

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,18 +4,98 @@ http {
     include       mime.types;
     default_type  application/octet-stream;
 
+    # SSL Settings
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers on;
+    ssl_ciphers HIGH:!aNULL:!MD5;
+
     server {
+        # HTTP server: redirect all HTTP traffic to HTTPS
         listen 80;
         server_name 127.0.0.1;
-        index index.html;
-        root /var/www/transcendence;
 
+        return 301 https://$host$request_uri;
+    }
+
+    server {
+        # HTTPS server
+        listen 443 ssl;
+        server_name 127.0.0.1;
+
+        # SSL certificate paths
+        ssl_certificate /etc/nginx/ssl/nginx.crt;
+        ssl_certificate_key /etc/nginx/ssl/nginx.key;
+
+        # Root directory
+        root /var/www/transcendence;
+        index index.html;
+
+        # Handle error page
         error_page 404 /index.html;
+
+        # General location for static files and fallback
         location = /index.html {
             root /var/www/transcendence;
             internal;
         }
 
+        location /media/auth/ {
+            alias /var/www/media/auth/;  # Mounted from authservice container
+            autoindex off;
+            expires 30d;
+            add_header Cache-Control "public, no-transform";
+        }
+
+        # Serve Friends Service Media Files
+        location /media/friends/ {
+            alias /var/www/media/friends/;  # Mounted from friendsservice container
+            autoindex off;
+            expires 30d;
+            add_header Cache-Control "public, no-transform";
+        }
+
+        # API Endpoints
+        location /api/auth/ {
+            proxy_pass http://authservice:8000/api/auth/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto https;
+            add_header Access-Control-Allow-Origin "https://127.0.0.1";
+            add_header Access-Control-Allow-Credentials "true";
+        }
+
+        location /api/game/ {
+            proxy_pass http://gameservice:8003/api/game/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Forwarded-Proto https;
+        }
+
+        location /api/2fa/ {
+            proxy_pass http://mfaservice:8001/api/2fa/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Forwarded-Proto https;
+        }
+
+        location /api/token/ {
+            proxy_pass http://jwtservice:8002/api/token/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Forwarded-Proto https;
+        }
+
+        location /api/oauth_token/ {
+            proxy_pass http://jwtservice:8002/api/oauth_token/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Forwarded-Proto https;
+        }
+
+        location /api/friends/ {
+            proxy_pass http://friendsservice:8004/api/friends/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Forwarded-Proto https;
+        }
+
+        # Static file handling for scripts and styles
         location /scripts/ {
             root /var/www/transcendence;
             add_header Content-Type application/javascript;
@@ -26,10 +106,7 @@ http {
             add_header Content-Type text/css;
         }
 
-        location /callback/ {
-            try_files $uri $uri/ /index.html;
-        }
-
+        # Catch-all fallback for SPA routing
         location / {
             try_files $uri $uri/ /index.html;
 
@@ -37,38 +114,6 @@ http {
             add_header Cache-Control "no-cache, no-store, must-revalidate";
             add_header Pragma "no-cache";
             add_header Expires "0";
-
-            # Allow credentials (cookies)
-            add_header Access-Control-Allow-Origin "http://127.0.0.1";
-            add_header Access-Control-Allow-Credentials "true";
-        }
-    }
-
-    server {
-        listen 443 ssl;
-        server_name 127.0.0.1;
-        index index.html;
-        root /var/www/transcendence;
-
-        ssl_certificate /etc/nginx/ssl/nginx.crt;
-        ssl_certificate_key /etc/nginx/ssl/nginx.key;
-
-        error_page 404 /index.html;
-        location = /index.html {
-            root /var/www/transcendence;
-            internal;
-        }
-        location / {
-            try_files $uri /index.html;
-
-            expires 0;
-            add_header Cache-Control "no-cache, no-store, must-revalidate";
-            add_header Pragma "no-cache";
-            add_header Expires "0";
-
-            # Allow credentials (cookies)
-            add_header Access-Control-Allow-Origin "https://127.0.0.1";
-            add_header Access-Control-Allow-Credentials "true";
         }
     }
 }
